--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@
 	  .active{
 		/* border-bottom:2px solid #42b3f4; */
 		border-style: double;
-		border-color: white;
+		border-color: transparent;
 		color: rgb(173 68 246 / var(--tw-text-opacity));
 		background-image: linear-gradient(to right, var(--tw-gradient-stops));
 		--tw-gradient-from: #2f0b6d;
@@ -102,7 +102,70 @@
 		box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 		font-weight: 600;
 		padding: 6px;
-		color:white;
+		color:transparent;
 		border-radius: 9999px;
 		font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	  }
+
+	  @-webkit-keyframes scroll {
+		0% {
+			transform: translateX(0);
+		}
+	  
+		100% {
+			transform: translateX(calc(-250px * 7));
+		}
+	  }
+	  
+	  @keyframes scroll {
+		0% {
+			transform: translateX(0);
+		}
+	  
+		100% {
+			transform: translateX(calc(-250px * 7));
+		}
+	  }
+	  
+	  .slider {
+		background: white;
+		box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
+		height: 50px;
+		margin: auto;
+		overflow: hidden;
+		position: relative;
+		/* width: 960px; */
+	  }
+	  
+	  .slider::before,
+	  .slider::after {
+		background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+		content: "";
+		height: 50px;
+		position: absolute;
+		width: 100px;
+		z-index: 2;
+	  }
+	  
+	  .slider::after {
+		right: 0;
+		top: 0;
+		transform: rotateZ(180deg);
+	  }
+	  
+	  .slider::before {
+		left: 0;
+		top: 0;
+	  }
+	  
+	  .slider .slide-track {
+		-webkit-animation: scroll 40s linear infinite;
+		animation: scroll 40s linear infinite;
+		display: flex;
+		width: calc(250px * 14);
+	  }
+	  
+	  .slider .slide {
+		height: 50px;
+		width: 250px;
 	  }
