--- a/src/index.css
+++ b/src/index.css
@@ -22,42 +22,26 @@
     z-index: 2;
   }
 
-	.scrollbar {
-		width:100%;
-		max-width:100%;
-		height:50px;
-		background-color:#ffffff;
-		overflow-y:scroll;
-	}
-	
-	#scrollbar-custom::-webkit-scrollbar{
-		width:12px;
-    padding: 6px;
-		background-color:whitesmoke;
-    backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-	}
-	#scrollbar-custom::-webkit-scrollbar:horizontal{
-		height:12px;
-	}
-	#scrollbar-custom::-webkit-scrollbar-track{
-		/* border:1px #c8c8c8 solid; */
-		border-radius:10px;
-		/* -webkit-box-shadow:0 0 6px #ffffff inset; */
-	}
-	#scrollbar-custom::-webkit-scrollbar-thumb{
-    background-image: linear-gradient(to left top, #3c065e, #009bdf, #0089f7, #546afc, #ad26e3);
-		border-radius:16px;
-	}
-	#scrollbar-custom::-webkit-scrollbar-thumb:hover{
-    padding: 6px;
-		background-color:#15cbdd;
-		/* border:1px solid #333333; */
-	}
-	#scrollbar-custom::-webkit-scrollbar-thumb:active{
-		background-color:#420b71;
-		border:1px solid #ffffff;
-	}
-
+  ::-webkit-scrollbar {
+	width: 10px;
+	border-radius: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	background: rgba(255, 255, 255, 0.01);
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: #290658;
+	/* border-radius: 10px; */
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: rgba(255, 255, 255, 0.1);
+  }
 	.tabs{
 		font-family:arial;
 		/* margin:0 auto; */
